tests/declare_fun/declare_fun.exp
Error ----------------------------------------------------------------------------------------------------- scope.js:3:5

Cannot call `bar` with `0` bound to `y` because number [1] is incompatible with string [2]. [incompatible-call]

   scope.js:3:5
   3| bar(0);
          ^ [1]

References:
   scope.js:1:25
   1| declare function bar(y: T): string;
                              ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `foo(...)` to undefined because boolean [1] is incompatible with undefined [2]. [incompatible-cast]

   test.js:7:2
   7| (foo(false): void); // error, boolean ~/~ undefined
       ^^^^^^^^^^

References:
   test.js:7:6
   7| (foo(false): void); // error, boolean ~/~ undefined
           ^^^^^ [1]
   test.js:7:14
   7| (foo(false): void); // error, boolean ~/~ undefined
                   ^^^^ [2]



Found 2 errors
